# swenoid

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: deployment.md  general_motion.md  real_experiments.md  reference_models.md
docs/superpowers/plans/: 2026-07-19-sim2sim-cli-repair.md
docs/superpowers/specs/: 2026-07-19-sim2sim-cli-repair-design.md
examples/real_experiments/: drawing_measurements.csv  metadata.json
reproducibility/: reference_models.json
src/swenoid/: __init__.py  bam_xm_actuators.py  model_constants.py  robot.py
src/swenoid/assets/: __init__.py
src/swenoid/assets/swenoid/: __init__.py
src/swenoid/assets/swenoid/params/: hardware.json  xm430_m6.json  xm540_m5.json
src/swenoid/assets/swenoid/xmls/: motor.xml  new.xml  swenoid.xml
src/swenoid/assets/swenoid/xmls/assets/: chest.stl  chest_collision.stl  chin.stl  chin_collision.stl  head_platform.stl  head_platform_collision.stl  hip_mid_section.stl  hip_mid_section_collision.stl  l_arm_mid_part.stl  l_arm_mid_part_collision.stl  l_elbow_part.stl  l_elbow_part_collision.stl  l_hip_y.stl  l_hip_y_collision.stl  l_hip_z.stl  l_hip_z_collision.stl  l_shoulder_x.stl  l_shoulder_x_collision.stl  l_thigh.stl  l_thigh_collision.stl  l_upper_handle.stl  l_upper_handle_collision.stl  left_foot.stl  left_foot_collision.stl  left_shin_part.stl  left_shin_part_collision.stl  neck.stl  neck_collision.stl  r_arm_mid_part.stl  r_arm_mid_part_collision.stl  r_elbow_part.stl  r_elbow_part_collision.stl  r_hip_y.stl  r_hip_y_collision.stl  r_hip_z.stl  r_hip_z_collision.stl  r_shoulder_x.stl  r_shoulder_x_collision.stl  r_thigh.stl  r_thigh_collision.stl  (+10 more)
src/swenoid/deployment/: __init__.py  bno085.py  calibrate.py  hardware_config.py  motor_controller.py  policy.py  real.py  recording.py  sim2sim.py  swenoid_control.py
src/swenoid/retargeting/: __init__.py  bones_seed.py  bones_seed_swenoid_map.json  convert_motion.py  filter_sequences.py  render_qpos.py  upload_wandb.py
src/swenoid/scripts/: __init__.py  list_envs.py  play.py  train.py
src/swenoid/tasks/: __init__.py  mdp.py  runners.py  tracking.py  velocity.py
src/swenoid/tasks/general_motion/: __init__.py  commands.py  config.py  rewards.py  support.py
tests/: conftest.py  test_conversion.py  test_deployment.py  test_experiment_recording.py  test_experiment_telemetry.py  test_hardware_config.py  test_hardware_drivers.py  test_mdp.py  test_real_experiment_runner.py  test_robot.py  test_tasks.py
typings/mujoco/: __init__.pyi  _callbacks.pyi  _constants.pyi  _enums.pyi  _functions.pyi  _render.pyi  _structs.pyi  viewer.pyi
